--- a/tika-core/pom.xml
+++ b/tika-core/pom.xml
@@ -69,6 +69,7 @@
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <extensions>true</extensions>
+        <version>3.2.0</version>
         <configuration>
           <instructions>
             <Bundle-DocURL>${project.url}</Bundle-DocURL>
@@ -150,6 +151,14 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
       </plugin>
     </plugins>
   </build>
